Disabled use of flexbox in Bootstrap to fix a layout bug in Safari on Mac and lower css file size

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -1,6 +1,3 @@
-// Enables the use of flexbox for layout
-$enable-flex: true;
-
 // Core variables and mixins
 @import "bootstrap/scss/variables";
 @import "bootstrap/scss/mixins";
